--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,10 +1,11 @@
 $primary-color: #119DA4;
 $primary-dark: #07787e;
-$secondary-color: #324B4D;
-$secondary-dark: #0b1520;
+$secondary-color: #1A2C42;
+$secondary-dark: #05090e;
 $light-gray: #F2F0EE;
 $gray: #EAE7E4;
 $text: #1B1B1B;
 $white: #fff;
 $footer-bg: #000;
+$text: #000;
 $border-radius: 3px;
