--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,7 +1,6 @@
 @import './_variables';
 @import './_utils';
-@import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap');
-* {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -18,7 +17,7 @@ html {
 
 body {
     font-size: 16px;
-    font-family: 'Asap', sans-serif !important;
+    font-family: 'Montserrat', sans-serif; 
     color: $text !important;
 }
 
@@ -28,7 +27,7 @@ body {
 
 @include for-mobile {
     .con {
-        width: 90%;
+        width: 95%;
     }
 }
 
@@ -60,7 +59,7 @@ h4,
 h5,
 a,
 h6 {
-    font-family: 'Asap', sans-serif !important;
+    font-family: 'Montserrat', sans-serif !important; 
 }
 
 section {
@@ -110,13 +109,14 @@ section {
         position: relative;
         z-index: 2;
         font-size: 1em;
+        margin: 0;
     }
     ;
     &::after {
         content: '';
         display: block;
         width: 100%;
-        height: 6px;
+        height: 4px;
         position: absolute;
         left: 0;
         bottom: 0;
