--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -20,6 +20,17 @@ body {
   font-size: 16px;
   font-family: 'Asap', sans-serif !important;
   color: #1B1B1B !important;
+  /* scrollbar ******************************* */
+  /* end scrollbar ******************************* */
+}
+
+body::-webkit-scrollbar {
+  width: .6em;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #1A2C42;
+  outline: 1px solid slategrey;
 }
 
 .con {
@@ -40,13 +51,13 @@ body {
 
 @media screen and (min-width: 1225px) {
   .con {
-    width: 1000px;
+    width: 1000px !important;
   }
 }
 
 @media screen and (min-width: 1445px) {
   .con {
-    width: 1200px;
+    width: 1300px !important;
   }
 }
 
@@ -61,8 +72,31 @@ h6 {
   font-family: 'Asap', sans-serif !important;
 }
 
+p {
+  font-size: 1em;
+  line-height: 1.5;
+}
+
 section {
   padding: 3em 0;
+}
+
+@media screen and (min-width: 768px) {
+  section {
+    padding: 3em 0;
+  }
+}
+
+.heading {
+  font-size: 2.1em;
+  font-weight: 600;
+  margin-bottom: .5em;
+}
+
+@media screen and (min-width: 768px) {
+  .heading {
+    font-size: 3em;
+  }
 }
 
 .con {
@@ -98,7 +132,7 @@ section {
   width: -moz-max-content;
   width: max-content;
   border-radius: 3px;
-  padding: .5em 1em;
+  padding: .5em 1em .7em 1em;
   font-size: 1em;
   display: block;
   position: relative;
@@ -143,7 +177,7 @@ section {
 }
 
 .btn.btn-secondary {
-  background-color: #324B4D;
+  background-color: #1A2C42;
 }
 
 .btn.btn-secondary::after {
