--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -19,7 +19,27 @@ html {
 body {
     font-size: 16px;
     font-family: 'Asap', sans-serif !important;
-    color: $text !important;
+    color: $text !important; 
+    scroll-behavior: smooth;
+    /* scrollbar ******************************* */
+    
+    &::-webkit-scrollbar {
+        width: .6em;
+    }
+    
+    // &::-webkit-scrollbar-track {
+    //     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    //     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    // }
+    
+    &::-webkit-scrollbar-thumb {
+        background-color: $secondary-color;
+        outline: 1px solid slategrey;
+    }
+    
+    
+    /* end scrollbar ******************************* */
+    
 }
 
 .con {
@@ -40,13 +60,13 @@ body {
 
 @include for-large {
     .con {
-        width: 1000px;
+        width: 1000px !important;
     }
 }
 
 @include for-extra-large {
     .con {
-        width: 1200px;
+        width: 1300px !important;
     }
 }
 
@@ -62,11 +82,24 @@ a,
 h6 {
     font-family: 'Asap', sans-serif !important;
 }
-
+p {
+    font-size: 1em;
+    line-height: 1.5;
+}
 section {
     padding: 3em 0;
+    @include for-tablet {
+        padding: 3em 0; 
+    }
 }
-
+.heading {
+    font-size: 2.1em;
+    font-weight: 600;
+    margin-bottom: .5em;
+    @include for-tablet {
+        font-size: 3em;
+    }
+}
 .con {
     margin: 0 auto;
 }
@@ -99,7 +132,7 @@ section {
 .btn {
     width: max-content;
     border-radius: $border-radius;
-    padding: .5em 1em;
+    padding: .5em 1em .7em 1em;
     font-size: 1em;
     display: block;
     position: relative;
@@ -143,6 +176,12 @@ section {
             background-color: $secondary-dark;
         }
     }
+    &.btn-orange {
+        background-color: $orange;
+        &::after {
+            background-color: #f86510;
+        }
+    }
     &.btn-white {
         background-color: $white;
         span {
@@ -150,6 +189,239 @@ section {
         }
         &::after {
             background-color: $gray;
+        }
+    }
+    &.btn-outline {
+        background-color: transparent;
+        border: 1px solid $text;
+        span {
+            color: $text;
+        }
+        &::after {
+            background-color: $gray;
+        }
+    }
+}
+
+// report card styles 
+.report-card { //this card is meant to be use in a grid system or in a container with a specified width 
+    width: 100%;
+    border-radius: $border-radius;
+    background-color: $white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    .top {
+        width: 100%;
+        height: 200px;
+        position: relative;
+        border-radius: 10px 10px 0 0;
+        @include for-tablet {
+            height: 300px;
+        }
+        >img {
+            width: 100%;
+            height: 100%;
+            border-radius: $border-radius $border-radius 0 0;
+            object-fit: cover;
+        }
+        .top-sub {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: transparent;
+            .like-con {
+                width: 100%;
+                display: flex;
+                justify-content: flex-end;
+                padding: 1em;
+                .like {
+                    width: max-content;
+                    height: 25px;
+                    border-radius: $border-radius;
+                    display: flex;
+                    align-items: center;
+                    background-color: $primary-color;
+                    padding: .3em .5em;
+                    &.liked {
+                        background-color: $orange;
+                    }
+                    &:hover {
+                        background-color: $primary-dark;
+                    }
+                    &:active {
+                        background-color: $text;
+                    }
+                    img {
+                        height: 15px;
+                        margin-right: .3em;
+                    }
+                    span {
+                        color: $white;
+                        font-size: 1em;
+                        font-weight: 600;
+                    }
+                }
+            }
+            .user-con {
+                width: 100%;
+                height: 50%;
+                background: linear-gradient(0deg, rgba(0, 0, 0, 0.699), transparent);
+                padding: 1em;
+                position: absolute;
+                bottom: 0;
+                display: flex;
+                align-items: flex-end;
+                .user-card{
+                    width: 100%;
+                    height: auto;
+                    display: flex;
+                    align-items: center;
+                    img {
+                        width: 40px;
+                        height: 40px;
+                        border-radius: 50%;
+                        margin-right: .5em;
+                        object-fit: cover;
+                    }
+                    .info {
+                        color: $white;
+                        .user-name {
+                            font-size: 1.1em;
+                            font-weight: 600;
+                            text-transform: capitalize;
+                        }
+                        .time {
+                            color: #eee;
+                            font-size: .9em;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .name {
+        width: 100%;
+        height: 7em;
+        padding: 1em;
+        font-size: 1.2em;
+        line-height: 1.5;
+        font-weight: 600;
+        display: block;
+        &:hover {
+            background-color: rgb(240, 240, 240);
+        }
+        p {
+            text-align: left;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            color: $text;
+            &::first-letter {
+                text-transform: uppercase;
+            }
+        }
+    }
+}
+
+// campaign card styles 
+.campaign-card { //this card is meant to be use in a grid system or in a container with a specified width 
+    // padding: 1em;
+    .card-img {
+        width: 100%;
+        height: 150px;
+        border-radius: $border-radius;
+        object-fit: cover;
+        @include for-large {
+            height: 250px;
+        }
+    }
+    .category {
+        width: max-content;
+        padding: .3em 3em;
+        background-color: $text;
+        color: $white;
+        border-radius: 50px;
+        font-size: .9em;
+        margin: 0 auto;
+        position: relative;
+        transform: translateY(-65%);
+    }
+    .name {
+        font-size: 1.4em;
+        font-weight: 600;
+        margin-bottom: .5rem;
+    }
+    p {
+        text-align: left;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        color: $text;
+        font-size: 1em;
+    }
+    .progress-con {
+        width: 100%;
+        height: 5px;
+        background-color: #efefef;
+        margin: 1rem 0;
+        border-radius: $border-radius;
+        .progress {
+            height: inherit;
+            width: 50%;
+            background-color: $orange;
+            position: relative;
+            .progress-value {
+                display: block;
+                position: absolute;
+                padding: .2rem .3rem;
+                border: 3px solid $white;
+                font-size: .8em;
+                background-color: $orange;
+                border-radius:  $border-radius;
+                right: 0;
+                top: 50%;
+                transform: translate(50%, -50%);
+                color: $white;
+                font-weight: 600;
+            }
+        }
+    }
+    .card-bottom {
+        width: 100%;
+        display: flex;
+        margin-top: 2em;
+        .sub {
+            padding-right: 1em;
+            margin-right: 1em;
+            position: relative;
+            &::after {
+                content: '';
+                display: block;
+                width: 2px;
+                height: 20px;
+                background-color: #ccc;
+                position: absolute;
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+            .name {
+                font-size: .9em;
+                color: $text-light;
+            }
+            .value {
+                font-size: 1.2em;
+                color: $text;
+                font-weight: 600;
+                line-height: .5;
+            }
+        } 
+        .btn {
+            width: 100%;
+            text-align: center;
         }
     }
 }
