--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,74 +1,72 @@
-@import './_variables';
-@import './_utils';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    transition-duration: .3s;
-    list-style-type: none;
-    border: none;
-    outline: none;
+@import "./_variables";
+@import "./_utils";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  transition-duration: 0.3s;
+  list-style-type: none;
+  border: none;
+  outline: none;
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-size: 16px;
-    font-family: 'Asap', sans-serif !important;
-    color: $text !important; 
-    scroll-behavior: smooth;
-    /* scrollbar ******************************* */
-    
-    &::-webkit-scrollbar {
-        width: .6em;
-    }
-    
-    // &::-webkit-scrollbar-track {
-    //     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    //     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    // }
-    
-    &::-webkit-scrollbar-thumb {
-        background-color: $secondary-color;
-        outline: 1px solid slategrey;
-    }
-    
-    
-    /* end scrollbar ******************************* */
-    
+  font-size: 16px;
+  font-family: "Asap", sans-serif !important;
+  color: $text !important;
+  scroll-behavior: smooth;
+  /* scrollbar ******************************* */
+
+  &::-webkit-scrollbar {
+    width: 0.6em;
+  }
+
+  // &::-webkit-scrollbar-track {
+  //     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  //     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  // }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $secondary-color;
+    outline: 1px solid slategrey;
+  }
+
+  /* end scrollbar ******************************* */
 }
 
 .con {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 @include for-mobile {
-    .con {
-        width: 95%;
-    }
+  .con {
+    width: 95%;
+  }
 }
 
 @include for-tablet {
-    .con {
-        width: 90%;
-    }
+  .con {
+    width: 90%;
+  }
 }
 
 @include for-large {
-    .con {
-        width: 1000px !important;
-    }
+  .con {
+    width: 1000px !important;
+  }
 }
 
 @include for-extra-large {
-    .con {
-        width: 1300px !important;
-    }
+  .con {
+    width: 1300px !important;
+  }
 }
-
 
 /* general styles  */
 
@@ -79,349 +77,404 @@ h4,
 h5,
 a,
 h6 {
-    font-family: 'Montserrat', sans-serif !important; 
+  font-family: "Montserrat", sans-serif !important;
 }
 p {
-    font-size: 1em;
-    line-height: 1.5;
+  font-size: 1em;
+  line-height: 1.5;
+  margin: 0;
+}
+a {
+    text-decoration: none;
+    &:hover {
+        text-decoration: none;
+    }
 }
 section {
+  padding: 3em 0;
+  @include for-tablet {
     padding: 3em 0;
-    @include for-tablet {
-        padding: 3em 0; 
-    }
+  }
 }
 .heading {
-    font-size: 2.1em;
-    font-weight: 600;
-    margin-bottom: .5em;
-    @include for-tablet {
-        font-size: 3em;
-    }
+  font-size: 2.1em;
+  font-weight: 400;
+  margin-bottom: 0.5em;
+  @include for-tablet {
+    font-size: 2.6em;
+  }
 }
 .con {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 @include for-mobile {
-    .con {
-        width: 90%;
-    }
+  .con {
+    width: 90%;
+  }
 }
 
 @include for-tablet {
-    .con {
-        width: 90%;
-    }
+  .con {
+    width: 90%;
+  }
 }
 
 @include for-large {
-    .con {
-        width: 1200px;
-    }
+  .con {
+    width: 1200px;
+  }
 }
 
 @include for-extra-large {
-    .con {
-        width: 1400px;
-    }
+  .con {
+    width: 1400px;
+  }
 }
 
-// button styles 
+// button styles
 .btn {
-    width: max-content;
-    border-radius: $border-radius;
-    padding: .5em 1em .7em 1em;
-    font-size: 1em;
-    display: block;
+  width: max-content;
+  border-radius: $border-radius;
+  padding: 0.5em 1em 0.7em 1em;
+  font-size: 1em;
+  display: block;
+  position: relative;
+  color: $white;
+  z-index: 2;
+  cursor: pointer;
+  text-decoration: none;
+  color: $white;
+  span {
     position: relative;
-    color: $white;
     z-index: 2;
-    cursor: pointer;
-    span {
-        position: relative;
-        z-index: 2;
-        font-size: 1em;
-        margin: 0;
-    }
-    ;
-    &::after {
-        content: '';
-        display: block;
-        width: 100%;
-        height: 4px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        border-radius: 0 0 $border-radius $border-radius;
-        transition-duration: .3s;
-        z-index: 1;
-    }
-    &:hover {
-        &::after {
-            height: 100%;
-            border-radius: $border-radius;
-            transition-duration: .3s;
-        }
-    }
-    &.btn-primary {
-        background-color: $primary-color;
-        &::after {
-            background-color: $primary-dark;
-        }
-    }
-    &.btn-secondary {
-        background-color: $secondary-color;
-        &::after {
-            background-color: $secondary-dark;
-        }
-    }
-    &.btn-orange {
-        background-color: $orange;
-        &::after {
-            background-color: #f86510;
-        }
-    }
-    &.btn-white {
-        background-color: $white;
-        span {
-            color: $text;
-        }
-        &::after {
-            background-color: $gray;
-        }
-    }
-    &.btn-outline {
-        background-color: transparent;
-        border: 1px solid $text;
-        span {
-            color: $text;
-        }
-        &::after {
-            background-color: $gray;
-        }
-    }
-}
-
-// report card styles 
-.report-card { //this card is meant to be use in a grid system or in a container with a specified width 
+    font-size: 1em;
+    margin: 0;
+  }
+  &::after {
+    content: "";
+    display: block;
     width: 100%;
-    border-radius: $border-radius;
+    height: 4px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-radius: 0 0 $border-radius $border-radius;
+    transition-duration: 0.3s;
+    z-index: 1;
+  }
+  &:hover {
+    text-decoration: none;
+    color: $white;
+    &::after {
+      height: 100%;
+      border-radius: $border-radius;
+      transition-duration: 0.3s;
+    }
+  }
+  &.btn-primary {
+    background-color: $primary-color;
+    &::after {
+      background-color: $primary-dark;
+    }
+  }
+  &.btn-secondary {
+    background-color: $secondary-color;
+    &::after {
+      background-color: $secondary-dark;
+    }
+  }
+  &.btn-orange {
+    background-color: $orange;
+    &::after {
+      background-color: #f86510;
+    }
+  }
+  &.btn-white {
     background-color: $white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    .top {
-        width: 100%;
-        height: 200px;
-        position: relative;
-        border-radius: 10px 10px 0 0;
-        @include for-tablet {
-            height: 300px;
-        }
-        >img {
-            width: 100%;
-            height: 100%;
-            border-radius: $border-radius $border-radius 0 0;
-            object-fit: cover;
-        }
-        .top-sub {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: transparent;
-            .like-con {
-                width: 100%;
-                display: flex;
-                justify-content: flex-end;
-                padding: 1em;
-                .like {
-                    width: max-content;
-                    height: 25px;
-                    border-radius: $border-radius;
-                    display: flex;
-                    align-items: center;
-                    background-color: $primary-color;
-                    padding: .3em .5em;
-                    &.liked {
-                        background-color: $orange;
-                    }
-                    &:hover {
-                        background-color: $primary-dark;
-                    }
-                    &:active {
-                        background-color: $text;
-                    }
-                    img {
-                        height: 15px;
-                        margin-right: .3em;
-                    }
-                    span {
-                        color: $white;
-                        font-size: 1em;
-                        font-weight: 600;
-                    }
-                }
-            }
-            .user-con {
-                width: 100%;
-                height: 50%;
-                background: linear-gradient(0deg, rgba(0, 0, 0, 0.699), transparent);
-                padding: 1em;
-                position: absolute;
-                bottom: 0;
-                display: flex;
-                align-items: flex-end;
-                .user-card{
-                    width: 100%;
-                    height: auto;
-                    display: flex;
-                    align-items: center;
-                    img {
-                        width: 40px;
-                        height: 40px;
-                        border-radius: 50%;
-                        margin-right: .5em;
-                        object-fit: cover;
-                    }
-                    .info {
-                        color: $white;
-                        .user-name {
-                            font-size: 1.1em;
-                            font-weight: 600;
-                            text-transform: capitalize;
-                        }
-                        .time {
-                            color: #eee;
-                            font-size: .9em;
-                        }
-                    }
-                }
-            }
-        }
+    span {
+      color: $text;
     }
-    .name {
-        width: 100%;
-        height: 7em;
-        padding: 1em;
-        font-size: 1.2em;
-        line-height: 1.5;
-        font-weight: 600;
-        display: block;
-        &:hover {
-            background-color: rgb(240, 240, 240);
-        }
-        p {
-            text-align: left;
-            display: -webkit-box;
-            -webkit-line-clamp: 3;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            color: $text;
-            &::first-letter {
-                text-transform: uppercase;
-            }
-        }
+    &::after {
+      background-color: $gray;
     }
+  }
+  &.btn-outline {
+    background-color: transparent;
+    border: 1px solid $text;
+    span {
+      color: $text;
+    }
+    &::after {
+      background-color: $gray;
+    }
+  }
 }
 
-// campaign card styles 
-.campaign-card { //this card is meant to be use in a grid system or in a container with a specified width 
-    // padding: 1em;
-    .card-img {
-        width: 100%;
-        height: 150px;
-        border-radius: $border-radius;
-        object-fit: cover;
-        @include for-large {
-            height: 250px;
-        }
+// report card styles
+.report-card {
+  //this card is meant to be use in a grid system or in a container with a specified width
+  width: 100%;
+  border-radius: $border-radius;
+  background-color: $white;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  .top {
+    width: 100%;
+    height: 200px;
+    position: relative;
+    border-radius: 10px 10px 0 0;
+    @include for-tablet {
+      height: 300px;
     }
-    .category {
-        width: max-content;
-        padding: .3em 3em;
-        background-color: $text;
-        color: $white;
-        border-radius: 50px;
-        font-size: .9em;
-        margin: 0 auto;
-        position: relative;
-        transform: translateY(-65%);
+    > img {
+      width: 100%;
+      height: 100%;
+      border-radius: $border-radius $border-radius 0 0;
+      object-fit: cover;
     }
-    .name {
-        font-size: 1.4em;
-        font-weight: 600;
-        margin-bottom: .5rem;
-    }
-    p {
-        text-align: left;
-        display: -webkit-box;
-        -webkit-line-clamp: 3;
-        -webkit-box-orient: vertical;
-        overflow: hidden;
-        color: $text;
-        font-size: 1em;
-    }
-    .progress-con {
-        width: 100%;
-        height: 5px;
-        background-color: #efefef;
-        margin: 1rem 0;
-        border-radius: $border-radius;
-        .progress {
-            height: inherit;
-            width: 50%;
-            background-color: $orange;
-            position: relative;
-            .progress-value {
-                display: block;
-                position: absolute;
-                padding: .2rem .3rem;
-                border: 3px solid $white;
-                font-size: .8em;
-                background-color: $orange;
-                border-radius:  $border-radius;
-                right: 0;
-                top: 50%;
-                transform: translate(50%, -50%);
-                color: $white;
-                font-weight: 600;
-            }
-        }
-    }
-    .card-bottom {
+    .top-sub {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: transparent;
+      .like-con {
         width: 100%;
         display: flex;
-        margin-top: 2em;
-        .sub {
-            padding-right: 1em;
-            margin-right: 1em;
-            position: relative;
-            &::after {
-                content: '';
-                display: block;
-                width: 2px;
-                height: 20px;
-                background-color: #ccc;
-                position: absolute;
-                right: 0;
-                top: 50%;
-                transform: translateY(-50%);
-            }
-            .name {
-                font-size: .9em;
-                color: $text-light;
-            }
-            .value {
-                font-size: 1.2em;
-                color: $text;
-                font-weight: 600;
-                line-height: .5;
-            }
-        } 
-        .btn {
-            width: 100%;
-            text-align: center;
+        justify-content: flex-end;
+        padding: 1em;
+        .like {
+          width: max-content;
+          height: 25px;
+          border-radius: $border-radius;
+          display: flex;
+          align-items: center;
+          background-color: $primary-color;
+          padding: 0.3em 0.5em;
+          &.liked {
+            background-color: $orange;
+          }
+          &:hover {
+            background-color: $primary-dark;
+            text-decoration: none;
+          }
+          &:active {
+            background-color: $text;
+          }
+          img {
+            height: 15px;
+            margin-right: 0.3em;
+          }
+          span {
+            color: $white;
+            font-size: 1em;
+            font-weight: 600;
+          }
         }
+      }
+      .user-con {
+        width: 100%;
+        height: 50%;
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.699), transparent);
+        padding: 1em;
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        align-items: flex-end;
+        .user-card {
+          width: 100%;
+          height: auto;
+          display: flex;
+          align-items: center;
+          img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 0.5em;
+            object-fit: cover;
+          }
+          .info {
+            color: $white;
+            .user-name {
+              font-size: 1.1em;
+              font-weight: 600;
+              text-transform: capitalize;
+            }
+            .time {
+              color: #eee;
+              font-size: 0.9em;
+            }
+          }
+        }
+      }
     }
+  }
+  .name {
+    width: 100%;
+    height: 7em;
+    padding: 1em;
+    font-size: 1.2em;
+    line-height: 1.5;
+    font-weight: 500;
+    display: block;
+    text-decoration: none;
+    &:hover {
+      background-color: rgb(240, 240, 240);
+    }
+    p {
+      text-align: left;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      color: $text;
+      &::first-letter {
+        text-transform: uppercase;
+      }
+    }
+  }
+}
+
+// campaign card styles
+.campaign-card {
+  //this card is meant to be use in a grid system or in a container with a specified width
+  // padding: 1em;
+  .card-img {
+    width: 100%;
+    height: 150px;
+    border-radius: $border-radius;
+    object-fit: cover;
+    @include for-large {
+      height: 250px;
+    }
+  }
+  .category {
+    width: max-content;
+    padding: 0.3em 3em;
+    background-color: $text;
+    color: $white;
+    border-radius: 50px;
+    font-size: 0.9em;
+    margin: 0 auto;
+    position: relative;
+    transform: translateY(-65%);
+  }
+  .name {
+    font-size: 1.4em;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    color: $text;
+    text-decoration: none;
+    &:hover {
+        text-decoration: none;
+        color: $primary-color;
+    }
+  }
+  p {
+    text-align: left;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    color: $text;
+    font-size: 1em;
+  }
+  .progress-con {
+    width: 100%;
+    height: 5px;
+    background-color: #efefef;
+    margin: 1rem 0;
+    border-radius: $border-radius;
+    .progress {
+      height: inherit;
+      width: 50%;
+      background-color: $orange;
+      position: relative;
+      .progress-value {
+        display: block;
+        position: absolute;
+        padding: 0.2rem 0.3rem;
+        border: 3px solid $white;
+        font-size: 0.8em;
+        background-color: $orange;
+        border-radius: $border-radius;
+        right: 0;
+        top: 50%;
+        transform: translate(50%, -50%);
+        color: $white;
+        font-weight: 600;
+      }
+    }
+  }
+  .card-bottom {
+    width: 100%;
+    display: flex;
+    margin-top: 2em;
+    .sub {
+      padding-right: 1em;
+      margin-right: 1em;
+      position: relative;
+      &::after {
+        content: "";
+        display: block;
+        width: 2px;
+        height: 20px;
+        background-color: #ccc;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+      .name {
+        font-size: 0.9em;
+        color: $text-light;
+      }
+      .value {
+        font-size: 1.2em;
+        color: $text;
+        font-weight: 600;
+        line-height: 0.5;
+      }
+    }
+    .btn {
+      width: 100%;
+      text-align: center;
+    }
+  }
+}
+
+.blog-card {
+  width: 100%;
+  height: auto;
+  .img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    margin-bottom: .5em;
+  }
+  .name {
+    font-size: 1.3em;
+    font-weight: 600;
+    margin-bottom: 0.3rem;
+    color: $text;
+    display: block;
+    text-decoration: none;
+    &:hover {
+      color: $primary-color;
+    }
+    &::first-letter {
+      text-transform: uppercase;
+    }
+  }
+  p {
+    text-align: left;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    color: $text;
+    font-size: 1em;
+    margin: 0;
+  }
 }
