--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -292,13 +292,18 @@ section {
     width: 100%;
     height: 7em;
     padding: 1em;
-    font-size: 1.2em;
+    font-size: 1em;
     line-height: 1.5;
     font-weight: 500;
     display: block;
     text-decoration: none;
     &:hover {
       background-color: rgb(240, 240, 240);
+    }
+    .category {
+      font-size: 0.8em;
+      color: $text-light;
+      font-weight: 500;
     }
     p {
       text-align: left;
@@ -322,8 +327,8 @@ section {
   display: flex;
   align-items: center;
   img {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     margin-right: 0.5em;
     object-fit: cover;
@@ -331,7 +336,7 @@ section {
   .info {
     color: $white;
     .user-name {
-      font-size: 1.1em;
+      font-size: 0.9em;
       font-weight: 600;
       text-transform: capitalize;
       line-height: 1;
@@ -339,7 +344,7 @@ section {
     }
     .time {
       color: #eee;
-      font-size: 0.9em;
+      font-size: 0.7em;
     }
   }
 }
