updated the landing, login, reports and report details pages

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -13,3 +13,11 @@ $footer-bg: #000;
 $border-radius: 3px;
 $border-color: #A6C1D3;
 $orange: #FF8945;
+$report-bg: #242a2a;
+$blue-pill: #3181BE;
+$purple-pill: #6D6BB3;
+$red-pill: #A53965;
+$green-pill: #007652;
+$gray-pill: #94B0B2;
+$pink-pill: #CF6CAB;
+$orange-pill: #FF8945;
